--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   chewie: ^1.2.2
   flutter_cube: ^0.1.1
   cached_network_image: ^3.1.0
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
