--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   video_player: ^2.1.14
-  chewie: ^1.2.2
   flutter_cube: ^0.1.1
   url_launcher: ^6.0.9
 
@@ -53,6 +52,7 @@ flutter:
     - assets/images/
     - assets/photos/
     - assets/models/
+    - assets/video/
     - assets/sequence/1/
     - assets/sequence/2/
     - assets/sequence/3/
